[type]:   fix [module]: css [id]:     #t-423979 [desc]:   fixes menu separator visibility problem in IE 6 [priv]:
git-svn-id: http://code.extjs.com/svn/ext/trunk@5847 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/menu.css
+++ b/resources/css/structure/menu.css
@@ -177,6 +177,17 @@ a.x-menu-item {
 }
 
 /*
+ * fixes separator visibility problem in IE 6
+ */
+.ext-strict .ext-ie6 .x-menu-sep-li {
+    padding: 3px 4px;
+}
+.ext-strict .ext-ie6 .x-menu-sep {
+    margin: 0;
+    height: 1px;
+}
+
+/*
  * Ugly mess to remove the white border under the picker
  */
 .ext-ie .x-date-menu{
